Fixed misalignment of caret icons in Selects

--- a/src/modules/dashboard/components/ColonyActions/ColonyActions.css
+++ b/src/modules/dashboard/components/ColonyActions/ColonyActions.css
@@ -7,6 +7,10 @@
   margin-right: 10px;
 }
 
+.filter button > div {
+  height: 18px;
+}
+
 .filter span {
   font-size: var(--size-small);
 }
